# rust-minecraft-poc

./: .gitignore  ASSET_SYSTEM.md  BLOCK_ID_SYSTEM.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
assets/shaders/: terrain_shader.wgsl  voxel_shader.wgsl
src/: main.rs
src/assets/: mod.rs
src/blocks/: block_type.rs  mod.rs  registry.rs
src/components/: camera.rs  crosshair.rs  mod.rs  ui.rs  voxel.rs  world.rs
src/mods/: mod.rs  mod_trait.rs  vanilla.rs
src/rendering/: isometric.rs  materials.rs  meshes.rs  mod.rs  terrain_material.rs  textures.rs
src/resources/: game_state.rs  inventory.rs  mod.rs
src/systems/: block_highlight.rs  block_interaction.rs  camera.rs  chunk_borders.rs  debug_overlay.rs  hotbar.rs  hotbar_models.rs  input.rs  lighting_overlay.rs  mod.rs  sky.rs  torch_light.rs  ui.rs  ui_visibility.rs  voxel.rs  world.rs
src/ui/: mod.rs  setup.rs
src/world/: chunk.rs  mesh_gen.rs  mod.rs  terrain.rs
